tests/ui/parser/issues/issue-83639.rs
// check-fail
// ignore-tidy-tab

fn main() {
    """	" //~ ERROR
}
